Fix alignment in cards, update save levels

--- a/app/sass/_about-save-level.scss
+++ b/app/sass/_about-save-level.scss
@@ -13,12 +13,16 @@
 		&.units{
 			font-size: 1.1rem;
 		}
+
+		small {
+			font-size: 0.6em;
+		}
 	}
 
     .row p{
         font-size: 1em;
     }
-    
+
 	th input {
 		width: 110px;
 		height: 2em;
@@ -41,7 +45,7 @@
 	.center-buttons{
 		text-align: center;
 	}
-	
+
 	.about-body-text{
 		padding-left: 30px;
 		font-size: 1.25rem;
@@ -50,7 +54,7 @@
 		margin: 0;
 		display: block;
 	}
-    .about-body-text-build{		
+    .about-body-text-build{
 		font-size: 1.25rem;
 		color: #fff;
 		text-align: left;
@@ -62,6 +66,10 @@
 .collapsible {
 	border: 0px;
 	background: rgba(16, 16, 16, 0.0);
+
+	li {
+		padding: 5px;
+	}
 }
 
 .collapsible, .side-nav {
