--- a/app/sass/_card.scss
+++ b/app/sass/_card.scss
@@ -10,21 +10,33 @@
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-floating) {
 	color: black;
 }
-	
+
 .card-content{
 	.type-powerup{
-		display: inline;
-		color: black;
+		display: inline-block;
+		color: #000;
+		height: 50px;
+
+		.material-icons {
+			font-size: 2.5em;
+			vertical-align: middle;
+		}
+
+		span.card-icon {
+			display: inline-block;
+			height: 50px;
+			padding-right: 10px;
+		}
+
+		span.card-title {
+			vertical-align: middle;
+		}
 	}
-	.material-icons {
-		font-size: 2.5em;
-		margin-top: -8px;
-		margin-left: -5px;
-	}
+
 	.icon-description {
-		margin-top: 7px;		
+		margin-top: 7px;
 	}
-	
+
 	img{
 		width: 100px;
 		height: 100px;
