--- a/app/sass/wisteria.scss
+++ b/app/sass/wisteria.scss
@@ -134,18 +134,17 @@ nav {
 // Maybe update to Material style if applicable
 .holo-tab-bar {
 	position: fixed;
-    margin-top: 0rem;
-    margin-bottom:1rem;
+    margin: 0 0 1rem;
     height:3rem;
     z-index:10;
-    background: rgba(16, 16, 16, 0.4);
+    background: rgba(16, 16, 16, 0.6);
     width:100%;
 
 	.holo-tab {
 		font-size: 0.9rem;
 		color: rgba(255, 255, 255, 0.6);
 		display: inline-block;
-		line-height: 3rem;
+		line-height: 2.90rem;
 		text-transform: uppercase;
 		padding: 0 30px;
 		@include transition(all 0.3s linear);
